# OOP_Labs

lab1/: CMakeLists.txt  calc.cpp  calc.h  task.cpp  test1.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: twelve.h
lab2/src/: twelve.cpp
lab2/test/: test.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Trapeze.hpp  array.hpp  figure.hpp  point.hpp  rectangle.hpp  square.hpp
lab3/src/: Trapeze.cpp  array.cpp  figure.cpp  point.cpp  rectangle.cpp  square.cpp
lab3/test/: test.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Array.hpp  Figure.hpp  Point.hpp  Rectangle.hpp  Square.hpp  Trapeze.hpp
lab4/test/: test.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: allocator.h  iterator.h  list.h  node.h  queue.h
lab5/src/: allocator.h  iterator.h  list.h  node.h
lab5/test/: test.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/headers/: DataMethods.hpp  Factory.hpp  NPC.hpp  Orc.hpp  Outlaw.hpp  Werewolf.hpp
lab6/include/: Dragon.h  Druid.h  Elf.h  battle.h  declaration.h  factory.h  npc.h  observe.h  ork.h  outlaw.h  werewolf.h
lab6/src/: Dragon.cpp  Druid.cpp  Elf.cpp  Factory.cpp  Observers.cpp  Orc.cpp  Outlaw.cpp  Werewolf.cpp  battle.cpp  factory.cpp  fight.cpp  npc.cpp  observConsole.cpp  observFile.cpp  observe.cpp  ork.cpp  outlaw.cpp  werewolf.cpp
lab6/test/: test.cpp
lab6/tests/: tests.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/headers/: DataMethods.hpp  Factory.hpp  FightManager.hpp  NPC.hpp  Orc.hpp  Outlaw.hpp  Werewolf.hpp
lab7/include/: battlefield.h  dragon.h  druid.h  elf.h  npc.h  observers.h
lab7/src/: Orc.cpp  (+11 more)
(+2 files in other folders)
